[gd_scene load_steps=13 format=3 uid="uid://bmlg6xhxtklb4"]

[ext_resource type="PackedScene" uid="uid://bs72ogkvdd7d6" path="res://Addons/proto_controller/proto_controller.tscn" id="1_a4wp2"]
[ext_resource type="Script" uid="uid://dcgfvnhw3b4v" path="res://Scripts/aim_level.gd" id="1_unb7u"]
[ext_resource type="Script" uid="uid://40j8byncmpmd" path="res://Scripts/pause_ui.gd" id="3_0ubgr"]
[ext_resource type="AudioStream" uid="uid://bc2u2spr5fcoq" path="res://Sounds/VandalShot.WAV" id="3_7k7q1"]
[ext_resource type="Script" uid="uid://dmu85njlepofj" path="res://Nodes/end_ui.gd" id="3_vnklj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_unb7u"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_7k7q1"]
sky_material = SubResource("ProceduralSkyMaterial_unb7u")

[sub_resource type="Environment" id="Environment_0ubgr"]
background_mode = 2
sky = SubResource("Sky_7k7q1")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_unb7u"]
albedo_color = Color(0.439049, 0.439049, 0.439049, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0ubgr"]
albedo_color = Color(0.601223, 0.601223, 0.601223, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7k7q1"]
size = Vector3(10, 0.02, 35)

[sub_resource type="GDScript" id="GDScript_unb7u"]
script/source = "extends Timer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="AimTrainer" type="Node3D"]
script = ExtResource("1_unb7u")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0ubgr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.985594, 0.161339, 0.0507354, -0.0384798, -0.0782013, 0.996195, 0.164692, -0.983796, -0.0708664, 0, 22.6, 0)
shadow_enabled = true

[node name="World Colliders" type="Node" parent="."]

[node name="Floor" type="CSGBox3D" parent="World Colliders"]
transform = Transform3D(53.9784, 0, 0, 0, 1.4, 0, 0, 0, 83.281, 0, -0.5, 1.4)
use_collision = true
material = SubResource("StandardMaterial3D_unb7u")

[node name="Ceiling" type="CSGBox3D" parent="World Colliders"]
transform = Transform3D(53.9784, 0, 0, 0, 1.4, 0, 0, 0, 83.281, 0, 9, 1.4)
use_collision = true
material = SubResource("StandardMaterial3D_unb7u")

[node name="Left Wall" type="CSGBox3D" parent="World Colliders"]
transform = Transform3D(26, 0, 0, 0, 10, 0, 0, 0, 1, 0, 5, -16.4)
use_collision = true
material = SubResource("StandardMaterial3D_0ubgr")

[node name="Right Wall" type="CSGBox3D" parent="World Colliders"]
transform = Transform3D(26, 0, 0, 0, 10, 0, 0, 0, 1, 0, 5, 17.7)
use_collision = true
material = SubResource("StandardMaterial3D_0ubgr")

[node name="Front Wall" type="CSGBox3D" parent="World Colliders"]
transform = Transform3D(-1.47744e-06, 0, 1, 0, 10, 0, -33.8, 0, -4.37114e-08, 13.4, 5, 0.8)
use_collision = true
material = SubResource("StandardMaterial3D_0ubgr")

[node name="Back Wall" type="CSGBox3D" parent="World Colliders"]
transform = Transform3D(-1.47744e-06, 0, 1, 0, 10, 0, -33.8, 0, -4.37114e-08, -12.5, 5, 0.8)
use_collision = true
material = SubResource("StandardMaterial3D_0ubgr")

[node name="Over_Undershoot Plane" type="StaticBody3D" parent="World Colliders"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 5.5, 4, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World Colliders/Over_Undershoot Plane"]
shape = SubResource("BoxShape3D_7k7q1")

[node name="ProtoController" parent="." instance=ExtResource("1_a4wp2")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.6, 0, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 7.5
one_shot = true
script = SubResource("GDScript_unb7u")

[node name="InsideLight" type="OmniLight3D" parent="."]
transform = Transform3D(0.985594, 0.161338, 0.0507354, -0.0384798, -0.0782013, 0.996195, 0.164692, -0.983796, -0.0708664, 0, 3.6, 0)
omni_range = 285.088
omni_attenuation = 0.3

[node name="UI" type="CanvasLayer" parent="."]

[node name="StartUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="UI/StartUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="EndUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("3_vnklj")

[node name="Panel" type="Panel" parent="UI/EndUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.5
offset_top = -137.5
offset_right = 157.5
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EndUI/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="Button" type="Button" parent="UI/EndUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 151.0
offset_right = 100.0
offset_bottom = 251.0
grow_horizontal = 2
text = "Replay"

[node name="PauseUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_0ubgr")

[node name="Button" type="Button" parent="UI/PauseUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Button2" type="Button" parent="UI/PauseUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = 70.0
offset_right = 99.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="Sounds" type="Node" parent="."]

[node name="GunNoise" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_7k7q1")
volume_db = -6.191

[node name="BallNoise" type="AudioStreamPlayer" parent="Sounds"]

[connection signal="pressed" from="UI/EndUI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/PauseUI/Button" to="UI/PauseUI" method="_on_button_pressed"]
[connection signal="pressed" from="UI/PauseUI/Button2" to="UI/PauseUI" method="_on_button_2_pressed"]
